fix broken styles in vercel development bundle

--- a/sass/components/_barrier.scss
+++ b/sass/components/_barrier.scss
@@ -88,7 +88,6 @@
     top: -12px;
     position: absolute;
     right: -1px;
-    border: 1px solid inherit;
     background-color: $color-blue;
     justify-content: space-between;
 
